tests/baselines/reference/for-inStatementsInvalid.errors.txt
==== tests/cases/compiler/for-inStatementsInvalid.ts (16 errors) ====
    var aNumber: number;
    for (aNumber in {}) { }
         ~~~~~~~
!!! for-inStatementsInvalid.ts(2,6): error TS2116: Variable declarations of a 'for' statement must be of types 'string' or 'any'.
    
    var aBoolean: boolean;
    for (aBoolean in {}) { }
         ~~~~~~~~
!!! for-inStatementsInvalid.ts(5,6): error TS2116: Variable declarations of a 'for' statement must be of types 'string' or 'any'.
    
    var aRegExp: RegExp;
    for (aRegExp in {}) { }
         ~~~~~~~
!!! for-inStatementsInvalid.ts(8,6): error TS2116: Variable declarations of a 'for' statement must be of types 'string' or 'any'.
    
    for (var idx : number in {}) { }
         ~~~~~~~~~~~~~~~~
!!! for-inStatementsInvalid.ts(10,6): error TS2115: Variable declarations of a 'for' statement cannot use a type annotation.
    
    function fn(): void { }
    for (var x in fn()) { }
                  ~~~~
!!! for-inStatementsInvalid.ts(13,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    
    var c : string, d:string, e;
    
    for (var x in c || d) { }
                  ~~~~~~
!!! for-inStatementsInvalid.ts(17,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    for (var x in e ? c : d) { }
                  ~~~~~~~~~
!!! for-inStatementsInvalid.ts(18,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    for (var x in 42 ? c : d) { }
                  ~~~~~~~~~~
!!! for-inStatementsInvalid.ts(19,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    for (var x in '' ? c : d) { }
                  ~~~~~~~~~~
!!! for-inStatementsInvalid.ts(20,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    for (var x in 42 ? d[x] : c[x]) { }
                  ~~~~~~~~~~~~~~~~
!!! for-inStatementsInvalid.ts(21,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    for (var x in c[23]) { }
                  ~~~~~
!!! for-inStatementsInvalid.ts(22,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    
    for (var x in (<T>(x: T) => x)) { }
    for (var x in function (x: string, y: number) { return x + y }) { }
    
    class A {
        biz() : number{
            for (var x in this.biz()) { }
                          ~~~~~~~~~~
!!! for-inStatementsInvalid.ts(29,23): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
            for (var x in this.biz) { }
            for (var x in this) { }
            return null;
        }
    
        static baz() : number {
            for (var x in this) { }
            for (var x in this.baz) { }
            for (var x in this.baz()) { }
                          ~~~~~~~~~~
!!! for-inStatementsInvalid.ts(38,23): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    
            return null;
        }
    }
    
    class B extends A {
        boz() {
            for (var x in this.biz()) { }
                          ~~~~~~~~~~
!!! for-inStatementsInvalid.ts(46,23): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
            for (var x in this.biz) { }
            for (var x in this) { }
    
            for (var x in super.biz) { }
            for (var x in super.biz()) { }
                          ~~~~~~~~~~~
!!! for-inStatementsInvalid.ts(51,23): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
            return null;
        }
    }
    
    interface I {
        id: number;
        [idx: number]: number;
    }
    var i: I;
    
    for (var x in i[42]) { } 
                  ~~~~~
!!! for-inStatementsInvalid.ts(62,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
    